@@ -1,3 +1,8 @@
+2012-09-05  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* contrib/toolbar.lisp (toolbar-adjust-root-size): Takes care of
+	multiple toolbar on the same root edge.
+
 2012-09-04  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-internal.lisp (show-all-children): Hide only children
